<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>ca.on.oicr.gsi</groupId>
    <artifactId>shesmu</artifactId>
    <version>1.8.7-SNAPSHOT</version>
  </parent>
  <artifactId>shesmu-plugin-jira</artifactId>
  <packaging>jar</packaging>
  <name>Shesmu Decision-Action Server - JIRA integration</name>
  <url>https://github.com/oicr-gsi/shesmu</url>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <repositories>
    <repository>
      <id>atlassian-public</id>
      <url>https://packages.atlassian.com/content/repositories/atlassian-public/</url>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>daily</updatePolicy>
        <checksumPolicy>warn</checksumPolicy>
      </snapshots>
      <releases>
        <enabled>true</enabled>
        <checksumPolicy>warn</checksumPolicy>
      </releases>
    </repository>
    <repository>
      <id>atlassian-repo</id>
      <name>atlassian public repo</name>
      <url>https://packages.atlassian.com/mvn/maven-external/</url>
    </repository>
  </repositories>
  <dependencies>
    <dependency>
      <groupId>ca.on.oicr.gsi</groupId>
      <artifactId>shesmu-pluginapi</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.atlassian.jira</groupId>
      <artifactId>jira-rest-java-client-api</artifactId>
      <version>5.1.6</version>
    </dependency>
    <dependency>
      <groupId>com.atlassian.jira</groupId>
      <artifactId>jira-rest-java-client-core</artifactId>
      <version>5.1.6</version>
    </dependency>
    <dependency>
      <groupId>io.atlassian.fugue</groupId>
      <artifactId>fugue</artifactId>
      <version>4.7.2</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>io.prometheus</groupId>
      <artifactId>simpleclient</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.kohsuke.metainf-services</groupId>
      <artifactId>metainf-services</artifactId>
      <optional>true</optional>
    </dependency>
  </dependencies>
  <build>
    <finalName>shesmu-plugin-jira</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <source>14</source>
          <target>14</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.4</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <relocations>
                <relocation>
                  <pattern>com.google</pattern>
                  <shadedPattern>com.atlassian.com.google</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>javax.ws</pattern>
                  <shadedPattern>com.atlassian.javax.ws</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>com.sun.ws</pattern>
                  <shadedPattern>com.atlassian.com.sun.ws</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>com.sun.jersey</pattern>
                  <shadedPattern>com.atlassian.com.sun.jersey</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>org.joda</pattern>
                  <shadedPattern>com.atlassian.org.joda</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>javax.annotation</pattern>
                  <shadedPattern>com.atlassian.javax.annotation</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>com.sun.xml</pattern>
                  <shadedPattern>com.atlassian.com.sun.xml</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>javax.xml</pattern>
                  <shadedPattern>com.atlassian.javax.xml</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>javax.activation</pattern>
                  <shadedPattern>com.atlassian.javax.activation</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>com.sun.activation</pattern>
                  <shadedPattern>com.atlassian.com.sun.activation</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>org.springframework</pattern>
                  <shadedPattern>com.atlassian.org.springframework</shadedPattern>
                </relocation>
              </relocations>
              <filters>
                <filter>
                  <artifact>*:*:*:*</artifact>
                  <excludes>
                    <exclude>log4j.properties</exclude>
                  </excludes>
                </filter>
              </filters>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
